# mimalloc-rust-box-pin-crash

./: Cargo.toml  rust-toolchain
.cargo/: config.toml
src/: main.rs
