[package]
name = "mimalloc-rust-box-pin-crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
mimalloc = { version = "0.1.28", default-features = false, features = []}